# MediaForge

./: .gitignore  COPYRIGHT  Dockerfile  MANIFEST.in  README.md  babel.cfg  docker-compose.gluetun.yaml  docker-compose.yaml  entrypoint.sh  pyproject.toml
.examples/themes/: README.md
.examples/themes/example_theme/: components.css  theme.css  theme.json
.examples/thirdparties/: README.md
.examples/thirdparties/example_advanced/: __init__.py
.examples/thirdparties/example_advanced/templates/: example_advanced.html
.examples/thirdparties/example_attach_tab/: __init__.py
.examples/thirdparties/example_cineinfo_source/: __init__.py  babel.cfg  sources.py
.examples/thirdparties/example_cineinfo_source/translations/de/LC_MESSAGES/: messages.mo  messages.po
.examples/thirdparties/example_content_source/: __init__.py  source.py
.examples/thirdparties/example_content_source/translations/de/LC_MESSAGES/: messages.mo  messages.po
.examples/thirdparties/example_hooks/: __init__.py
.examples/thirdparties/example_hooks/translations/de/LC_MESSAGES/: messages.mo  messages.po
.examples/thirdparties/example_integration/: __init__.py  routes.py  service.py
.examples/thirdparties/example_integration/static/: example_integration.css  example_integration.js
.examples/thirdparties/example_integration/templates/: example_integration.html
.examples/thirdparties/example_integration/translations/de/LC_MESSAGES/: messages.mo  messages.po
.examples/thirdparties/example_new_tab/: __init__.py
.examples/thirdparties/example_own_menu/: __init__.py
.examples/thirdparties/example_own_menu/templates/: example_own_menu.html
.examples/thirdparties/example_own_menu/translations/de/LC_MESSAGES/: messages.mo  messages.po
.examples/thirdparties/example_ui_components/: __init__.py
.examples/thirdparties/example_ui_components/static/: example_ui_components.css  example_ui_components.js
.examples/thirdparties/example_ui_components/templates/: example_ui_components.html
.examples/thirdparties/example_ui_components/translations/de/LC_MESSAGES/: messages.mo  messages.po
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: check-linux.yaml  check-macos.yaml  check-windows.yaml  codeql.yaml  conflict_labeler.yaml  docker-check.yaml  issue-ai-triage.yaml  pr-validation.yaml  python-syntax-check.yaml  stale.yaml  trivy-scan.yaml
Guides/: Guide_For_Synology-NAS_Devices.md
src/mediaforge/: autodeps.py  autostart.py  config.py  mirrors.py  providers.py  search.py
src/mediaforge/extractors/: __init__.py
src/mediaforge/extractors/provider/: megakino.py
src/mediaforge/models/: __init__.py
src/mediaforge/models/aniworld_to/: episode.py
src/mediaforge/models/burningseries/: __init__.py  series.py
src/mediaforge/models/cineby/: __init__.py  series.py  streamcrypto.py
src/mediaforge/models/common/: __init__.py  common.py  hls.py  http.py  provider_map.py
src/mediaforge/models/direct_link/: browser_sniff.py  episode.py  probe.py  resolver.py
src/mediaforge/models/filmpalast_to/: episode.py
src/mediaforge/models/hanime_tv/: browser.py
src/mediaforge/models/kinox/: __init__.py  series.py
src/mediaforge/models/mangafire_to/: __init__.py  series.py
src/mediaforge/models/megakino_to/: episode.py  movie.py  scraper.py
src/mediaforge/models/s_to/: episode.py
src/mediaforge/playwright/: __init__.py  captcha.py
src/mediaforge/telemetry/: __init__.py  client.py  events.py  hooks.py  registry.py  sanitize.py  settings.py  sysinfo.py
src/mediaforge/web/: app.py  auth.py  autosync_worker.py  backup.py  crunchyroll_service.py  db.py  download_history.py  encoding_worker.py  fernsehserien_service.py  language_groups.py  mediascan.py  nfo_provider.py  notifications.py  queue_worker.py  restart.py  runtime_state.py  selfupdate.py  settings_migration.py  themes.py  tmdb_cache.py  transcoder.py  upscale_worker.py  uptime_monitor.py
src/mediaforge/web/cineinfo/: __init__.py  orchestrator.py  registry.py  source.py
src/mediaforge/web/routes/: autosync.py  backup.py  browse.py  calendar_routes.py  captcha.py  devinfos.py  direct_link.py  encoding.py  extensions.py  favourites.py  history.py  image_proxy.py  integrations.py  progress.py  push_notifications.py  queue.py  search.py  seerr.py  settings.py  stats.py  stream.py  syncplay.py  themes.py  uptime.py  v1_api.py
src/mediaforge/web/static/: advanced_search.css  app.js  appearance.css  autosync.css  autosync.js  autosync_filter.js  buttons.css  calendar.js  cards.css  devinfos.css  devinfos.js  encoding_queue.js  extension_cards.js  extensions.css  favourites.css  favourites.js  forms.css  history.js  index.css  integrations.css  integrations.js  library.css  library.js  modals.css  module_store.js  number_input.js  queue.js  seerr.css  seerr.js  settings.css  settings.js  settings_rows.css  shared_modals.css  shell.css  stats.js  style.css  telemetry.css  telemetry.js  upscale_queue.js
src/mediaforge/web/templates/: _encoding_body.html  _field_macros.html  _history_body.html  _monitoring_nav.html  _notifications_menu.html  _settings_card_macro.html  _settings_menu.html  _stats_body.html  _uptime_body.html  advanced_search.html  autosync.html  base.html  devinfos.html  encoding.html  extensions.html  favourites.html  history.html  index.html  integrations.html  module_settings.html  monitoring.html  notifications.html  seerr.html  settings.html  setup.html  setup_token.html  shared_modals.html  stats.html  uptime.html
src/mediaforge/web/thirdparties/: __init__.py  deps.py  registry.py  signing.py  store.py  trusted_keys.py
src/mediaforge/web/thirdparties/anime_seasons/: __init__.py  routes.py  service.py
src/mediaforge/web/thirdparties/anime_seasons/static/: anime_seasons.css  anime_seasons_view.js
src/mediaforge/web/thirdparties/mediacalendar/: __init__.py  anilist_client.py  db.py  ics_export.py  routes.py  service.py  tmdb_client.py
tests/: check_linux.sh  check_macos.sh  check_windows.bat
tests/encoding/: check_nvenc.py
(+11 files in other folders)
