[project]
name = "mediaforge"
version = "1.2.5"
authors = [
  { name = "TheMRX13 (Pascal Keller)", email = "keller.pascal1313@gmail.com" },
  { name = "Domekologe (Domenick Waldvogel)", email = "domenick.waldvogel@domekologe.eu" },
]
description = "MediaForge is a WebUI-only tool for downloading anime and series from AniWorld, SerienStream and FilmPalast. Start it with 'mediaforge' to launch the web interface directly."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  # [brotli] extra: aniworld.to (Cloudflare) can serve Brotli-encoded (Content-Encoding: br)
  # responses. niquests advertises "br" in Accept-Encoding regardless (see config.py's
  # _DEFAULT_HEADERS), but without this extra it has no decoder for it: resp.text still
  # "succeeds" — charset-normalizer force-decodes the still-compressed bytes into unprintable
  # mojibake instead of raising — which then reads as an empty/garbled page and gets
  # misdiagnosed as an AniWorld layout change. See models/aniworld_to/series.py's
  # AniworldSeries.__diagnose() for the detection and the accurate error message.
  "niquests[brotli]",
  "ffmpeg-python",
  "yt-dlp",
  "python-dotenv",
  "rich",
  "fake-useragent",
  "flask",
  "flask-wtf",
  "flask-limiter",
  "authlib",
  "joserfc",
  "requests",
  "beautifulsoup4",
  "waitress",
  "packaging",
  "cryptography",
  "patchright==1.61.2",
  "pywebpush",
  "watchdog",
  "dnspython",
  "curl_cffi",
  "flask-babel",
  "markdown",
  "bleach",
  # Validate TLS certificates against the OS trust store (Windows/macOS/Linux)
  # instead of the ageing certifi bundle. Used as an explicitly passed SSLContext
  "truststore",
  "pystray",
  "Pillow",
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
license = "GPL-3.0-or-later"
license-files = ["LICENSE", "COPYRIGHT"]

[project.urls]
homepage = "https://github.com/PD-Codes/MediaForge"
changelog = "https://github.com/PD-Codes/MediaForge/commits/main"
documentation = "https://github.com/PD-Codes/MediaForge/wiki"
bugs = "https://github.com/PD-Codes/MediaForge/issues"
issues = "https://github.com/PD-Codes/MediaForge/issues"
tracker = "https://github.com/PD-Codes/MediaForge/issues"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mediaforge = [
  "web/templates/*.html",
  "web/static/*.css",
  "web/static/*.js",
  "web/static/*.json",
  "web/static/*.svg",
  "web/static/*.png",
  "web/static/flags/*.svg",
  "web/static/TranslationFlags/*.svg",
  "bin/windows/*",
  "anime4k/shader/*.glsl",
  "web/translations/de/LC_MESSAGES/*.mo",
  "web/translations/de/LC_MESSAGES/*.po",
  # Third-party integrations (web/thirdparties/<name>/) each bring their own
  # templates/static — a recursive glob so a new drop-in folder is packaged
  # automatically, without editing this list.
  "web/thirdparties/**/templates/*.html",
  "web/thirdparties/**/static/*.css",
  "web/thirdparties/**/static/*.js",
  "web/thirdparties/**/translations/*/LC_MESSAGES/*.mo",
  "web/thirdparties/**/translations/*/LC_MESSAGES/*.po",
  "web/thirdparties/**/babel.cfg",
]

[project.scripts]
mediaforge = "mediaforge.entry:mediaforge"
